fixed broken css and styling again

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,6 +46,7 @@ li {
 	font-size: 50px;
 	float:right;
 	margin: 0px;
+	margin-right: 130px;
 }
 #main{
 	padding: 10px;
